fix: improve case studies heading contrast

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -62,6 +62,16 @@
 
 .caseStudiesSection {
     background-color: #fff;
+
+    .sectionHeader {
+        h2 {
+            color: #0f172a;
+        }
+
+        p {
+            color: #475569;
+        }
+    }
 }
 
 .caseStudyGrid {
